CXO-2328 - Added correct data in the RegisterReadingInfo when linked to dataloggerslave